<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app -->
    <string name="app_name">Wheres My Family</string>

    <!-- acttivity_register_child2 -->
    <string name="register_barn_title">Registrér Barn</string>
    <string name="action_settings">Settings</string>
    <string name="register_child_headline">Registréringsvejledning</string>
    <string name="register_child_description"> 1. Placér begge enheders bagside mod hinanden \n
        2. Vent på en lyd, der bekræfter, at begge enheder har fundet hinanden. \n
        3. Rør ved afsenderens skærm for at starte dataoverførslen. \n
        4. Dataoverførslen bekræftes ved afspilning af en lyd.</string>
    <string name="turn_on_nfc_headline">Aktivér NFC:</string>
    <string name="turn_on_nfc">http://www.androidauthority.com/how-to-use-nfc-android-2-164644/</string>
    <string name="registrer_barn_knap">Registrér barn</string>
    <string name="title_activity_registrer_barn">Registrér Barn</string>
    <string name="registrer_barn_title">Registrér Barn</string>
    <string name="title_activity_registrer_parent">Registrér Forælder</string>
    <string name="register_parent_title">Registrér Forælder</string>
    <string name="title_activity_register_child">Registrér barn</string>
    <string name="parent_name_textView_title">Forælder navn</string>
    <string name="parent_phone_textView_title">Telefonnummer</string>
    <string name="parent_email_textView_title">Email</string>

    <!-- activity_register_parent -->
    <string name="child_name_textView_title">Barnets navn</string>
    <string name="child_phone_textView_title">Telefonnummer</string>
    <string name="child_email_textView_title">Email</string>

    <!-- child_overview -->
    <string name="title_activity_child_overview">Oversigt</string>
    <string name="my_children_title">Mine børn</string>
    <string name="action_search"></string>
    <string name="title_activity_child_info">child_info</string>
    <string name="edit_child_button_text">Redigér</string>
    <string name="call_button_text">Ring op</string>
    <string name="register_child_name_hint">Navn</string>
    <string name="register_child_button_title">Registrér</string>
    <string name="register_child_phone_hint">Telefonnummer</string>

    <string-array name="child_info_list">
        <item>Kalender</item>
        <item>Se nuværende Position</item>
        <item>Navigation</item>
        <item>Spærring af App</item>
    </string-array>

    <!-- calendar_view -->
    <string name="title_activity_calendar_view">Kalender</string>
    <string name="calendar_add_event_button_text">+</string>
    <string name="title_activity_position">position</string>
    <string name="title_activity_calendar">Kalender</string>
    <string name="title_activity_child__start__screen">Forside</string>
    <string name="title_activity_parent__start__screen">Forside</string>
    <string name="action_logout">Log Ud</string>
    <string name="action_deleteusr">Slet Bruger</string>

    <!-- Button styles -->
    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <!-- sign_up_screen -->
    <string name="title_activity_sign_up_screen">Registrér Bruger</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_in_screen">Log Ind</string>

    <!-- logged_in -->
    <string name="title_activity_logged_in">Mine børn</string>
    <string name="main_no_items">Der er ikke gemt nogen børn</string>

    <!-- logged_in_child -->
    <string name="title_activity_logged_in_child">Logget ind</string>

    <!-- parent_info -->
    <string name="title_activity_parent_info">Forælder Info</string>
    <string name="parent_info_headline">Kontaktinformation</string>
    <string name="parent_phone">Forælder telefon:</string>
    <string name="parent_name">Forælder navn:</string>
    <string name="submit_button_title">Tilføj</string>

    <!-- swipe_menu -->
    <string name="title_activity_swipe_menu">SwipeMenu</string>
    <string name="title_activity_register_parent">Registrér Forælder</string>
    <string name="register_with_gcm">Register with GCM</string>
    <string name="not_registered">Not yet registered</string>
    <string name="register_with_no_tags">Register without Tags</string>
    <string name="register_with_tags">Register With Tags</string>
    <string name="status_registered">Registered with GCM</string>
    <string name="status_registered_with_tags">Registered with TAGS</string>
    <string name="status_registered_with_no_tags">Registered with NO tags</string>
    <string name="title_activity_location">Kort</string>
    <string name="title_activity_my_calender">Kalender</string>
    <string name="title_activity_new_cal_event">Opret Begivenhed</string>
    <string name="SaveEventErrorMessage1">You must enter all fields to save event</string>
    <string name="title_activity_overview">Oversigt</string>

    <!-- Location -->
    <string name="menu_hybrid_mode_title">Hybrid</string>
    <string name="menu_normal_mode_title">Normal</string>
    <string name="menu_satellite_mode_title">Satellit</string>
    <string name="menu_terrain_mode_title">Terræn</string>
    <string name="menu_map_mode_title">Map mode</string>
    <string name="menu_show_traffic_title">Show traffic</string>
    <string name="menu_zoom_in_title">Zoom in</string>
    <string name="menu_zoom_out_title">Zoom out</string>
    <string name="menu_add_new_place">Nyt sted</string>
    <string name="menu_show_child_position">Barnets position</string>
    <string name="menu_navigate_child_position">Vis navigering</string>

    <!-- Overview -->
    <string name="overview_title_edit_text">Tilføj et nyt sted</string>
    <string name="overview_place_text_view">Stednavn</string>
    <string name="overview_place_hint_text">Navn på sted, f.eks "Hjem", "Skole" etc.</string>
    <string name="overview_address_text_view">Adresse</string>
    <string name="overview_address_hint_text">Søg på adresse</string>
    <string name="overview_save_place_button">Tilføj til mine steder</string>
    <string name="title_activity_new_location">Tilføj nyt sted</string>
    <string name="overview_name_textview">Navn:</string>
    <string name="overview_phone_textview">Mobilnummer:</string>
    <string name="overview_position_textview">Position:</string>
    <string name="overview_future_events_textview">Kommende begivenheder</string>
    <string name="overview_take_pic_textview">Tag billede</string>
    <string name="overview_btn_take_pic_text">Bepp</string>
    <string name="overview_radius_text_view">Sæt radius</string>
    <string name="overview_radius_edit_text">Vælg størrelse på område i meter</string>

    <!-- AddNewLocation -->
    <string name="add_new_location_headline">Tilføj steder til favoritter</string>
    <string name="title_activity_favorite_places">Gemte steder</string>

    <!--FavoritePlaces-->
    <string name="favorite_places_headline">Favoritliste</string>
    <string name="action_add_new_place"></string>
    <string name="showpositionoverview">Gå til</string>
    <string name="glemt_login">Glemt dit Password?</string>
    <string name="navigate_to_child">Navigér</string>
    <string name="main_no_places">Der er ikke gemt nogen steder</string>

    <!--NavigationDrawer-->
    <string-array name="navigation_drawer_array">
        <item>Forside</item>
        <item>Steder</item>
        <item>Kalenderaftale</item>
    </string-array>

</resources>
