<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/regParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="dk.projekt.bachelor.wheresmyfamily.activities.RegisterChild">

    <LinearLayout
        android:id="@+id/parentNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/parentNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/parent_name_textView_title"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/parentNameInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginLeft="10dp"
            android:hint="@string/register_child_name_hint"
            android:inputType="text"
            android:textSize="18dp"/>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/parentPhoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@+id/parentNameLayout">

        <TextView
            android:id="@+id/parentPhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/parent_phone_textView_title"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/parentPhoneInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginLeft="10dp"
            android:hint="@string/register_child_phone_hint"
            android:inputType="phone"
            android:textSize="18dp"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/parentEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@+id/parentPhoneLayout">

        <TextView
            android:id="@+id/parentEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/parent_email_textView_title"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/parentEmailInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginLeft="10dp"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@+id/parentEmailLayout"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/register_child_headline"
            android:layout_marginBottom="5dp"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/register_child_description"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/nfc" />
        </LinearLayout>

</RelativeLayout>
