<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dk.projekt.bachelor.wheresmyfamily.ParentInfo"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textViewChildTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent_info_headline"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewChildTitle"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewParentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:text="@string/parent_name"/>

            <EditText
                android:id="@+id/parentNameInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewParentPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:text="@string/parent_phone" />

            <EditText
                android:id="@+id/parentPhoneInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:fontFamily="sans-serif-black"
                android:textColor="#F5F5DC"
                android:layout_marginTop="60dp"
                android:text="@string/submit_button_title" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
