<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dk.projekt.bachelor.wheresmyfamily.activities.OverviewActivity"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/overview_name_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/linearlayout_bg_overview">

        <RelativeLayout
            android:id="@+id/take_pic_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivThumbnailPhoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/unknown_person"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="3dp"/>

            <ImageButton
                android:id="@+id/btnTakePic"
                android:layout_below="@id/ivThumbnailPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_centerInParent="true"
                style="?android:attr/actionButtonStyle"
                android:src="@android:drawable/ic_menu_camera"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relaname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/namename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="2dp"
                android:text="@string/overview_name_textview"
                android:textSize="18dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/overview_child_name"
                android:layout_below="@+id/namename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:textSize="18dp"/>

            <TextView
                android:layout_below="@id/overview_child_name"
                android:id="@+id/cellnr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="2dp"
                android:text="@string/overview_phone_textview"
                android:textSize="18dp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cellnr">
                <TextView
                    android:id="@+id/overview_child_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:textSize="18dp"/>

                <ImageButton
                    android:id="@+id/callchild"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    style="?android:attr/actionButtonStyle"
                    android:src="@android:drawable/ic_menu_call"
                    android:textSize="18dp"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/overview_future_events_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/overview_future_events_textview"
            android:textStyle="bold"
            android:textSize="20dp"/>
    </LinearLayout>



    <ListView
        android:id="@android:id/list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin">
    </ListView>

</LinearLayout>
